--- a/indexcom.css
+++ b/indexcom.css
@@ -1085,12 +1085,27 @@ hr.new8 {
     width: 100%;
     height: 250px;  
     padding: 50px;
-
 }
 .ffor{
+    position: absolute;
 
-    left: 200px;
-    border: 1px solid rgb(65, 59, 59);
-    width: 600px;
-
+    left: 250px;
+    border: 2px solid rgb(102, 215, 177);
+    width: 530px;
+    padding: 15px;
 }
+.name1{
+width: 500px;
+height: 40px;
+}
+.mail1{
+    width: 500px;
+    height: 40px;
+    }
+    .butsen{
+        width: 450px;
+        height: 50px;
+        font-size: 20px;
+        background-color: rgb(102, 215, 177) ;
+        color: aliceblue;
+    }
